k8s/manifests/openldap/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: openldap-service
spec:
  type: ClusterIP
  selector:
    app: openldap
  ports:
    - name: openldap-ldap
      port: 1389
      targetPort: openldap-ldap
    - name: openldap-ldaps
      port: 1636
      targetPort: openldap-ldaps
